2010-05-07 Homer Xing <homer.xing@gmail.com>

    * Optimize source code architecture. Provide a generic architecture for software install/remove.

2010-05-03 SHANG Yuanchun <idealities@gmail.com>

    * Gray buttons if APT cache is empty. 
      Gray buttons if Ailurus cache is empty.
      Make folder statistic more precise. 

2010-05-03 Homer Xing <homer.xing@gmail.com>

    * Improve memory information. Display "GB" if memory is more than 1 GB.

2010-05-03 HAN Haofu <gtxx3600@gmail.com>

    * Display CPU Level 1 & Level 2 cache information in "Information pane"

2010-05-03 MA Yue <velly.empire@gmail.com>

    * Add a new page in System Setting pane, in order to configure Firefox
    * Fix a bug: "enable/disable sudo" does not work

2010-05-01 HUANG Wei <wei.kukey@gmail.com>

    * Add web page url: Upgrade Fedora using an application called "PreUpgrade"

2010-05-01 Homer Xing <homer.xing@gmail.com>

    * Improve the efficiency of automatically updating "Information pane".
      Only refresh necessary items.
    * Add a feature to print all information.
    * Change "GNOME locale" icon.

2010-04-30 CHEN Yangyang <skabyy@gmail.com>

    * Merge the "Hardware information pane" and the "Linux information pane"
    * "Information pane" will now Automatically update the information

2010-04-30 Homer Xing <homer.xing@gmail.com>

    * Fix problem: Synaptic is not installed on KUbuntu.

2010-04-28 QI Chengjie <starboy.qi@gmail.com>

    * Make DBus call persistent in a session

2010-04-26 MA Yue <velly.empire@gmail.com>

    * Improve "world of padman" installation in Fedora
    * Add lshw: display hardware information
    * Show "gnome control center" item in menu

2010-04-26 Homer Xing <homer.xing@gmail.com>

    * Fix problem: After installing Ailurus on Fedora, 
      "Ailurus quick setup" does not appear in "System Tools" entry.

2010-04-25 CHEN Yangyang <skabyy@gmail.com>

    * Change the position of the popup menu of toolitem